--- a/webapp/src/styles/global/_fonts.scss
+++ b/webapp/src/styles/global/_fonts.scss
@@ -1,8 +1,18 @@
 @font-face {
   font-family: "Apercu";
+  font-weight: 400;
+  src: url("../fonts/apercu_regular.otf") format('truetype');
+}
+
+@font-face {
+  font-family: "Apercu";
   font-style: italic;
   font-weight: 400;
   src: url("../fonts/apercu_regular_italic.otf") format('truetype');
 }
 
-*TBW*
+@font-face {
+  font-family: "Apercu";
+  font-weight: 600;
+  src: url("../fonts/apercu_bold.otf") format('truetype');
+}
